Fixed overflow problem with the background

--- a/main_style.css
+++ b/main_style.css
@@ -1,5 +1,12 @@
-html, body {
+html {
+  width: 100%;
   height: 100%;
+  margin: 0px;
+  padding: 0px;
+  background: #ffffff;
+}
+
+body {
   width: 100%;
   margin: 0px;
   padding: 0px;
